Tidy notebook and add some links

--- a/A Study of Gender Sentiment on Twitter.ipynb
+++ b/A Study of Gender Sentiment on Twitter.ipynb
@@ -4,26 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://sdgcompass.org/wp-content/uploads/2016/04/global-goals_05_1.jpg\" alt=\"SDG5\" style=\"width: 200px;\" align=\"right\"/>\n",
+    "<img src=\"sdg5.jpg\" alt=\"SDG5\" style=\"width: 200px;\" align=\"right\"/>\n",
     "\n",
-    "# Sentiment Analysis of Gender Equality Discourse on Twitter\n",
+    "# A Study of Gender Sentiment on Twitter\n",
     "\n",
-    "[Dr David Johnson](http://djson.io), *Consultant Data Scientist*, [UNESCAP-SD](http://www.unescap.org/our-work/statistics)\n",
+    "[Dr David Johnson](http://djson.io), *Big Data Consultant*, for [UNESCAP](http://www.unescap.org).\n",
     "\n",
     "<sub><sup>[Submission metadata](#MISDR+checklist)</sup></sub>\n",
     "\n",
     "## 1. Description \n",
     "\n",
-    "*SDG 5: Achieve gender equality and empower all women and girls* already has established indicators to measure progress towards various specific targets in this area. To investigate if something like public discourse such as Twitter feeds could act as a proxy to SDG 5 measurement, this notebook documents an example of utilizing simple data mining on archives of tweets while demonstrating the use of big data processing technologies to deal with large semi-structured datasets.\n",
+    "*SDG 5: Achieve gender equality and empower all women and girls* already has established indicators to measure progress towards various specific targets in this area. To investigate if something like public discourse such as Twitter conversations could act as a proxy to SDG 5 measurement, this notebook documents an example of utilizing simple data mining of tweets while demonstrating the use of big data processing technologies to deal with large semi-structured datasets.\n",
     "\n",
-    "Hypothesis: countries with more open discussion about gender inequality are more likely to rank better on the Gender Inequality Index (GDI) or other established measures.\n",
+    "Hypothesis: countries with more open discussion about gender inequality are more likely to rank better on the Gender Inequality Index (GII) or other established measures.\n",
     "\n",
     "Potential problems:\n",
     " - Twitter is not equally popularly used across different countries.\n",
     " - Discussing gender inequality issues may not mean there is less gender equality, but could indicate the opposite.\n",
     " \n",
     "But:\n",
-    " - We can try and determine if public discourse on gender inequality in general could be used as a measure.\n",
+    " - We can try and determine how male/female mentions in public discourse are perceived by analyzing sentiment attached to those mentions.\n",
     " - Applying the sentiment analyses to other sources of discourse in countries that Twitter is less relevant can demonstrate the potential for how a project can be put into a other national contexts. e.g. Discourse taken from other kinds of social networks, transcribing public radio shows, news, blogs etc. instead of online social media."
    ]
   },
@@ -35,13 +35,13 @@
     "\n",
     "### Data sources\n",
     "\n",
-    "To collect some data, we used Twitter's public API to get two datasets per country - a list of users who identify themselves somehow with being associated with a country, and then by using this list of users we collect a sample of tweets. The assumption is that tweets by these users can constitute a sample of tweets categorized by country.\n",
+    "To collect some data, we used the [Twitter API](https://developer.twitter.com/en/docs/api-reference-index) to get two datasets per country - a list of users who identify themselves somehow with being associated with a country, and then by using this list of users we collect a sample of tweets. The assumption is that tweets by these users can constitute a sample of tweets categorized by country.\n",
     "\n",
-    "We use `tweepy`, a Python module that wraps up the calls needed to be made to the Twitter API in a easy-to-use programming API. Two scripts, one called `get_users.py` to retrieve a sample of Twitter users, and a second script `get_tweets.py` to retrieve a sample of tweets for a given a list of users.\n",
+    "We use `tweepy` (http://www.tweepy.org), a Python module that wraps up the calls needed to be made to the Twitter API in a easy-to-use programming API. Two scripts, one called `get_users.py` to retrieve a sample of Twitter users, and a second script `get_tweets.py` to retrieve a sample of tweets for a given a list of users.\n",
     "\n",
     "There are however several challenges to the data collection process:\n",
     "\n",
-    "1. Twitter's public API puts rate limits on pulling data, a limit to the velocity of data we can gather. This may cause the collection process to become long-running and may require a computer to be on and collecting data for a number of days.\n",
+    "1. Twitter API puts rate limits on pulling data, a limit to the velocity of data we can gather. This may cause the collection process to become long-running and may require a computer to be on and collecting data for a number of days.\n",
     "2. The size of the datasets collected can be estimated, but not predicted. This is because individual tweets may vary in length and so we can estimate a maximum size and work down from that. The challenge here is of volume and ensuring we have a computer with enough capacity to store the collected datasets.\n",
     "\n",
     "We address these challenges in two ways: by (1) automating the collection process and (2) leveraging cloud computing for data storage and processing.\n",
@@ -50,7 +50,7 @@
     "\n",
     "In early experiments with using the `tweepy` Python module, we found that once scaling up to retrieving data from multiple users (100s to 1000s) would begin to take hours, and in some cases days due to Twitter's rate limiting policy. Once the rate limit had been exceeded (180 requests within each 15 minute time window), `tweepy` would pause until the rate limit window had refreshed. This meant that there was a requirement to run these collection processes as very long running processes and a computer would be required to be switched-on for long periods of time in order to complete this task.\n",
     "\n",
-    "To achieve this, we leverage Amazon's EC2 (Elastic Compute Cloud) to set up a long-running cloud server that we could run the collection process on. We set up a `t2.micro` instance in `eu-west-1` region (EU Republic of Ireland) with the following specifications:\n",
+    "To achieve this, we leverage [Amazon EC2](https://aws.amazon.com/ec2/) (Elastic Compute Cloud) to set up a long-running cloud server that we could run the collection process on. We set up a `t2.micro` instance in `eu-west-1` region (EU Republic of Ireland) with the following specifications:\n",
     "\n",
     "- OS: Canonical Ubuntu 16.04 LTS, amd64 xenial image built on 2017-10-26\n",
     "- Image size: 8GB\n",
@@ -74,7 +74,7 @@
     "\n",
     "`</dev/null >/dev/null 2<&1` redirects the standard output `stdout` and standard error `stderr` streams to `/dev/null` essentially discarding the streams. This could be rewritten to write to file, but in our case we do not wish to log any output from the standard output or error streams.\n",
     "\n",
-    "We manually run the `get_users.py` script for a subset of UNESCAP countries (Australia, Hong Kong, India, Indonesia, Malaysia, New Zealand, Philippines, Singapore, Sri Lanka, Thailand) as these processes took less than 1 minute per country. The countries that we chose were partly selected based on the EF English Proficiency Index (https://www.ef.sg/epi/regions/asia/) where we want to select countries who are most likely to use Twitter in English. China was excluded due to the Twitter service being unavailable to their population, Vietnam due to low usage of Twitter in the country, and South Korea and Japan were excluded because although their English proficiency is high, their usage of Twitter is more greatly biased to Korean and Japanese respectively than the other selected countries.\n",
+    "We manually run the `get_users.py` script for a subset of UNESCAP countries (Australia, Hong Kong, India, Indonesia, Malaysia, New Zealand, Philippines, Singapore, Sri Lanka, Thailand) as these processes took less than 1 minute per country. The countries that we chose were partly selected based on the [EF English Proficiency Index](https://www.ef.sg/epi/regions/asia/) where we want to select countries who are most likely to use Twitter in English. China was excluded due to the Twitter service being unavailable to their population, Vietnam due to low usage of Twitter in the country, and South Korea and Japan were excluded because although their English proficiency is high, their usage of Twitter is more greatly biased to Korean and Japanese respectively than the other selected countries.\n",
     "\n",
     "Next, we ran each of the following commands in linux to collect tweets samples by country.\n",
     "```\n",
@@ -92,16 +92,18 @@
     "\n",
     "This produced the following set of files, sampling 1020 users and requesting the most recent 320 tweets per user. Note that for the Hong Kong and India datasets, the request was set up to ask for the last 3200 tweets per user but the sample size was reduced for timeliness reasons. On the 320 tweet setting the harvest took 3-5 hours. On the 3200 tweet setting, the harvest would take about 1 day.\n",
     "\n",
-    "- [australia_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/australia_tweets.csv) (26.7MB)\n",
-    "- [hong kong_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/hong+kong_tweets.csv) (163.7MB)\n",
-    "- [india_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/india_tweets.csv) (156.7MB)\n",
-    "- [indonesia_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/indonesia_tweets.csv) (41.6MB)\n",
-    "- [malaysia_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/malaysia_tweets.csv) (41MB)\n",
-    "- [new zealand_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/new+zealand_tweets.csv) (57.9MB)\n",
-    "- [philippines_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/philippines_tweets.csv) (32.7MB)\n",
-    "- [singapore_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/singapore_tweets.csv) (12.4MB)\n",
-    "- [sri lanka_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/sri+lanka_tweets.csv) (22.5MB)\n",
-    "- [thailand_tweets.csv](https://s3-eu-west-1.amazonaws.com/escap-twitter-project/thailand_tweets.csv) (21.2MB)\n"
+    "- [australia_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (26.7MB)\n",
+    "- [hong kong_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (163.7MB)\n",
+    "- [india_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (156.7MB)\n",
+    "- [indonesia_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (41.6MB)\n",
+    "- [malaysia_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (41MB)\n",
+    "- [new zealand_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (57.9MB)\n",
+    "- [philippines_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (32.7MB)\n",
+    "- [singapore_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (12.4MB)\n",
+    "- [sri lanka_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (22.5MB)\n",
+    "- [thailand_tweets.csv](https://github.com/djson8/gender-sentiment-index/tree/master/data) (21.2MB)\n",
+    "\n",
+    "Note that in order to comply with the Twitter data license, the links above link to redacted versions of the datasets used, where the user and tweet IDs are provided should you wish to reconstruct the datasets used yourself."
    ]
   },
   {
@@ -153,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Enter your Twitter API key and access tokens here\n",
@@ -173,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "country = 'hong kong'"
@@ -193,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tweepy\n",
@@ -493,7 +501,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tweepy\n",
@@ -763,7 +773,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import unicode_literals\n",
@@ -889,7 +901,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -993,7 +1007,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# n_docs is the total number of tweets - length (number of rows) of the input data\n",
@@ -1020,7 +1036,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "positive_vocab = []\n",
@@ -1042,7 +1060,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -1531,7 +1551,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1552,7 +1574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
